--- a/app/src/main/res/layout/fragment_add_projects.xml
+++ b/app/src/main/res/layout/fragment_add_projects.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -47,9 +46,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="17dp"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="12dp"
         app:cardBackgroundColor="#66D9D9D9"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="0dp"
         app:layout_constraintTop_toBottomOf="@id/arrowBack">
 
 
@@ -58,27 +57,46 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="7dp"
+                android:layout_marginTop="12dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Project Type"
                 android:textColor="#035E5E"
-                android:layout_marginTop="12dp"
-                android:layout_marginStart="7dp"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="262dp"
+                android:id="@+id/select_project"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="242dp"
                 android:layout_height="wrap_content"
-                tools:layout_editor_absoluteX="84dp"
-                tools:layout_editor_absoluteY="18dp">
+                android:layout_marginStart="12dp"
+                android:elevation="0dp"
+                app:endIconMode="dropdown_menu"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false"
+                app:layout_constraintBottom_toBottomOf="@+id/textView11"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView11"
+                app:layout_constraintTop_toTopOf="@+id/textView11">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
+                <AutoCompleteTextView
+                    android:id="@+id/drop_menu"
+                    android:layout_width="232dp"
                     android:layout_height="wrap_content"
-                    android:hint="hint" />
+                    android:background="@drawable/project_bg"
+                    android:elevation="0dp"
+                    android:fontFamily="@font/poppins_light"
+                    android:hint="Select Project Type"
+                    android:inputType="none"
+                    android:padding="4dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    android:textSize="12sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
