--- a/app/src/main/res/layout/fragment_add_projects.xml
+++ b/app/src/main/res/layout/fragment_add_projects.xml
@@ -30,22 +30,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/arrowBack" />
 
-    <ImageView
-        android:id="@+id/notification"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="12dp"
-        android:src="@drawable/notification"
-        app:layout_constraintBottom_toBottomOf="@+id/arrowBack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/arrowBack" />
+
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="22dp"
         app:cardBackgroundColor="#66D9D9D9"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
@@ -60,8 +52,8 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="7dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="17dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Project Type"
                 android:textColor="#035E5E"
@@ -73,7 +65,7 @@
                 android:id="@+id/select_project"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="242dp"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:layout_marginStart="12dp"
                 android:elevation="0dp"
                 app:endIconMode="dropdown_menu"
@@ -87,7 +79,7 @@
                 <AutoCompleteTextView
                     android:id="@+id/drop_menu"
                     android:layout_width="232dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="25dp"
                     android:background="@drawable/project_bg"
                     android:elevation="0dp"
                     android:fontFamily="@font/poppins_light"
@@ -95,9 +87,62 @@
                     android:inputType="none"
                     android:padding="4dp"
                     android:textColor="@color/black"
-                    android:textColorHint="@color/black"
+                    android:textColorHint="#B8000000"
                     android:textSize="12sp" />
+
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="17dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Description"
+                android:textColor="#035E5E"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@+id/textView11"
+                app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+
+            <TextView
+                android:id="@+id/txtDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/poppins_light"
+                android:text="What is the current condition of your project and\n what you want done"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@+id/textView14"
+                app:layout_constraintTop_toBottomOf="@id/textView14" />
+
+            <EditText
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/project_bg"
+                android:hint="Type Here .."
+                android:inputType="text"
+                android:lines="5"
+                android:textAlignment="viewStart"
+                android:textColor="@color/black"
+                android:textColorHint="#B8000000"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@+id/txtDescription"
+                app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:layout_marginTop="12dp"
+                app:layout_constraintStart_toStartOf="@+id/description"
+                app:layout_constraintTop_toBottomOf="@id/description" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
