--- a/app/src/main/res/layout/fragment_add_projects.xml
+++ b/app/src/main/res/layout/fragment_add_projects.xml
@@ -31,8 +31,6 @@
         app:layout_constraintTop_toTopOf="@+id/arrowBack" />
 
 
-
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,18 +51,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="17dp"
+                android:layout_marginTop="22dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Project Type"
                 android:textColor="#035E5E"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/select_project"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="242dp"
+                android:layout_width="222dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="12dp"
                 android:elevation="0dp"
@@ -78,7 +76,7 @@
 
                 <AutoCompleteTextView
                     android:id="@+id/drop_menu"
-                    android:layout_width="232dp"
+                    android:layout_width="222dp"
                     android:layout_height="25dp"
                     android:background="@drawable/project_bg"
                     android:elevation="0dp"
@@ -96,11 +94,11 @@
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="17dp"
+                android:layout_marginTop="22dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Description"
                 android:textColor="#035E5E"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@+id/textView11"
                 app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
@@ -109,11 +107,11 @@
                 android:id="@+id/txtDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/poppins_light"
+                android:layout_marginTop="17dp"
+                android:fontFamily="@font/poppins_medium"
                 android:text="What is the current condition of your project and\n what you want done"
                 android:textColor="@color/black"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 app:layout_constraintStart_toStartOf="@+id/textView14"
                 app:layout_constraintTop_toBottomOf="@id/textView14" />
 
@@ -122,8 +120,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="22dp"
                 android:background="@drawable/project_bg"
+                android:fontFamily="@font/poppins_medium"
                 android:hint="Type Here .."
                 android:inputType="text"
                 android:lines="5"
@@ -135,13 +134,96 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
 
             <TextView
-                android:id="@+id/textView16"
+                android:id="@+id/txtProjectTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                android:layout_marginTop="12dp"
-                app:layout_constraintStart_toStartOf="@+id/description"
+                android:layout_marginTop="22dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Project Title"
+                android:textColor="#035E5E"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/textView14"
                 app:layout_constraintTop_toBottomOf="@id/description" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/title"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="222dp"
+                android:layout_height="30dp"
+                app:layout_constraintBottom_toBottomOf="@+id/txtProjectTitle"
+                app:layout_constraintEnd_toEndOf="@+id/description"
+                app:layout_constraintStart_toEndOf="@id/txtProjectTitle"
+                app:layout_constraintTop_toTopOf="@+id/txtProjectTitle">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/title_et"
+                    android:layout_width="222dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/project_bg"
+                    android:fontFamily="@font/poppins_medium"
+                    android:hint="Type Here ___"
+                    android:textColor="@color/black"
+                    android:textColorHint="#B8008787"
+                    android:textSize="12sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Worker Needed"
+                android:textColor="#035E5E"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/txtProjectTitle"
+                app:layout_constraintTop_toBottomOf="@+id/title" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/workerss_needed"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="200dp"
+                android:layout_height="35dp"
+                app:layout_constraintBottom_toBottomOf="@id/textView15"
+                app:layout_constraintEnd_toEndOf="@+id/title"
+                app:layout_constraintStart_toEndOf="@+id/textView15"
+                app:layout_constraintTop_toTopOf="@+id/textView15">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/workersNeeded_et"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/project_bg"
+                    android:hint="plumber" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/postJob"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/btnsignup"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Post Job"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintTop_toBottomOf="@id/workerss_needed" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/btnsignup"
+                android:fontFamily="@font/poppins_medium"
+                android:visibility="invisible"
+                android:text="Post Job"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintTop_toBottomOf="@id/postJob" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
